tests/isa/x86/expression_fixups/negative/wrap32_overflow.asm
origin(0x100000000)
x86.use64()

entry:
    mov eax, target
target:
    ret
